--- a/users-repos-git/src/app/users/user-info/user-info.component.scss
+++ b/users-repos-git/src/app/users/user-info/user-info.component.scss
@@ -1,5 +1,15 @@
-.title {
+.title, .error {
   padding : 15px 0 5px 15px;
+}
+
+.reload-btn {
+  background-color : #000033;
+	color : white;
+	border-width: 0;
+	padding: 10px 50px;
+	font-family: fantasy;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 .list-head {
